# AIGen

./: .dockerignore  .env  .gitignore  .stylelintrc.json  COPYRIGHT  Cargo.toml  Dockerfile  GUIDE.md  LICENSE  Lightpaper.md  NOTICE  PATENT-NOVELTY-ANALYSIS.md  Patent-Guide.md  Proof-of-Intelligence-Whitepaper.md  README.md  Whitepaper.md  YC_DEMO.md  build_output.txt  ceo_key.priv.hex  ceo_key.pub.hex  docker-compose.yml  local_config.toml  nginx.conf  spec.md
.cargo/: config.toml
.trae/documents/: Web3 Wallet Integration for Admin Dashboard.md
aigen-data/mistral-7b/: manifest.json
blockchain-core/: Cargo.toml  README.md
blockchain-core/src/: block.rs  chain.rs  crypto.rs  g8_scheduler.rs  lib.rs  state.rs  transaction.rs  types.rs
blockchain-core/tests/: block_test.rs  chain_test.rs  crypto_test.rs  state_test.rs  transaction_test.rs  types_test.rs
consensus/: Cargo.toml
consensus/src/: lib.rs  poi.rs  state.rs  validator.rs
consensus/tests/: distributed_poi_tests.rs  inference_verification_tests.rs
dashboard/: README.md  admin-client.js  app.js  charts.js  config.js  config.laptop.sample.json  config.sample.json  config.vps.sample.json  index.html  style.css  wallet.js
dashboard/examples/: sign-admin-request.js
dashboard/services/: api-service.js  auth-service.js  state-manager.js
dashboard/tests/: index.html  test-runner.js  web3-manager.test.js
dashboard/ui/: wallet-ui.js
dashboard/web3/: base-provider.js  web3-context.js  web3-manager.js
dashboard/web3/providers/: coinbase.js  phantom.js  trust.js
distributed-compute/: Cargo.toml
distributed-compute/src/: lib.rs  routing.rs  scheduler.rs  secret_sharing.rs  state.rs  task.rs  training.rs
distributed-compute/tests/: federated_learning_tests.rs  pipeline_integration_tests.rs  reward_integration_tests.rs  routing_tests.rs  scheduler_tests.rs  state_tests.rs
distributed-inference/: Cargo.toml  config.toml
distributed-inference/src/: block_assignment.rs  checkpoint_manager.rs  coordinator.rs  failover_coordinator.rs  health_monitor.rs  lib.rs  orchestrator.rs  pipeline_message.rs  replica_manager.rs  route_selector.rs  tensor_transport.rs  topology_optimizer.rs
distributed-inference/tests/: batching_integration.rs  canary_rollout_tests.rs  checkpoint_failover_tests.rs  integration_tests.rs  optimization_tests.rs  orchestrator_tests.rs
docker/: PRODUCTION.md  README.md
docker/configs/: bootstrap.toml  full-node-1.toml  full-node-2.toml  miner.toml  validator.toml
docker/scripts/: init-network.sh  logs.sh  monitor.sh  start-network.sh  stop-network.sh
docs/: AI_MODELS.md  API.md  CEO_OPERATIONS.md  DEMO_MVP_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  ECONOMIC_TIERS.md  GENESIS_KEY_SECURITY.md  GUIDE.md  PRODUCTION_GUIDE.md  README.md  TESTING.md  TROUBLESHOOTING.md
docs/admin/: README.md  WEB3.md  admin-client.js  app.js  charts.js  config.laptop.sample.json  config.sample.json  config.vps.sample.json  index.html  style.css  wallet.js
docs/admin/examples/: sign-admin-request.js
docs/admin/ui/: wallet-ui.js
docs/admin/web3/: web3-manager.js
docs/admin/web3/providers/: brave.js  metamask.js  walletconnect.js
docs/examples/curl/: README.md  test-api.sh
docs/examples/javascript/: README.md  aigen-sdk.d.ts  aigen-sdk.js  basic-client.js  chat-example.js  package.json  sdk-example.js  stream-example.js  transaction-example.js  websocket-example.js
docs/examples/python/: README.md  aigen_sdk.py  basic_client.py  chat_example.py  requirements.txt  sdk_example.py  stream_example.py  transaction_example.py
docs/playground/: README.md  app.js  index.html  style.css
genesis/: Cargo.toml
genesis/data/: safety_prompt_template.txt
genesis/src/: authority.rs  benevolence.rs  config.rs  constitution.rs  governance_config.rs  lib.rs  safety_oracle.rs  shutdown.rs  types.rs  veto.rs
model/: Cargo.toml
model/Mistral/: model.yml
model/src/: ads.rs  batch.rs  continual_learning.rs  inference.rs  lib.rs  registry.rs  sharding.rs  storage.rs  tiers.rs  verification.rs
model/tests/: ads_tests.rs  batch_integration_tests.rs  batch_tests.rs  end_to_end_tests.rs  fragment_execution_tests.rs  inference_tests.rs  registry_tests.rs  sharding_tests.rs  storage_tests.rs  tier_integration_tests.rs  tier_tests.rs
network/: Cargo.toml
network/src/: config.rs  consensus_bridge.rs  discovery.rs  events.rs  fragment_stream.rs  gossip.rs  lib.rs  metrics.rs  model_stream.rs  model_sync.rs  node_types.rs  p2p.rs  protocol.rs  reputation.rs  shutdown_propagation.rs  tensor_stream.rs  vram_monitor.rs
network/tests/: model_distribution_test.rs  p2p_integration_test.rs  tensor_stream_tests.rs
node/: Cargo.toml  README.md  config.example.json  config.example.toml  config.json  config.toml  pipeline-config.example.toml
node/src/: chat_completion_test.rs  cli.rs  config.rs  keypair.rs  main.rs
node/src/rpc/: ceo.rs  methods.rs  mod.rs  model.rs  server.rs  subscriptions.rs  types.rs
node/tests/: chat_completion_test.rs
poi-types/: Cargo.toml
poi-types/src/: lib.rs
scripts/: Cargo.toml  README.md  generate_ceo_keypair.rs  install_onnx.py  setup-test-model.bat  setup-test-model.py  setup-test-model.sh  sign_shutdown_command.rs  sign_sip_approval.rs
scripts/src/: lib.rs
scripts/tests/: integration_test.rs
tests/: ai_node_integration_test.rs  genesis_integration_test.rs
