[workspace]
members = [
    "genesis",
    "blockchain-core",
    "consensus",
    "network",
    "model",
    "node",
    "scripts",
    "distributed-compute",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cesar Saguier Antebi"]
description = "AIGEN L1 blockchain with immutable Genesis CEO control layer"
license = "BUSL-1.1"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
rand = "0.8"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["serde", "zeroize"] }
once_cell = "1.18"
reqwest = { version = "0.11", features = ["stream", "rustls-tls", "multipart"], default-features = false }
libp2p = "0.53"
sha3 = "0.10"
blake3 = "1.5"
parking_lot = "0.12"
dashmap = "5.5"
base64 = "0.21"
clap = { version = "4.4", features = ["derive", "env"] }
toml = "0.8"
config = "0.14"
dirs = "5.0"
tracing = { version = "0.1", default-features = false }
tracing-core = "0.1"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
zstd = "0.13"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = "abort"
