[package]
name = "blockchain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
genesis = { path = "../genesis", features = ["test-utils"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
proptest = "1"
