[package]
name = "blockchain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
genesis = { path = "../genesis", features = ["test-utils"] }
poi-types = { path = "../poi-types" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
base64 = { workspace = true }
aes-gcm = { version = "0.10", features = ["aes"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
curve25519-dalek = { version = "4.1", features = ["digest", "legacy_compatibility"] }

[dev-dependencies]
proptest = "1"
