[package]
name = "consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
genesis = { path = "../genesis" }
blockchain-core = { path = "../blockchain-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
