[package]
name = "consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
genesis = { path = "../genesis" }
blockchain-core = { path = "../blockchain-core" }
model = { path = "../model" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
tracing = "0.1"

[dev-dependencies]
futures = "0.3"
prost = "0.12"
reqwest = { workspace = true }
zip = "0.6"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "load-dynamic"] }
