[package]
name = "consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
genesis = { path = "../genesis" }
blockchain-core = { path = "../blockchain-core" }
poi-types = { path = "../poi-types" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"

[dev-dependencies]
model = { path = "../model" }
sha3 = { workspace = true }
futures = "0.3"
prost = "0.12"
reqwest = { workspace = true }
zip = "0.6"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "load-dynamic"] }
