[package]
name = "genesis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
test-utils = []

[dependencies]
ed25519-dalek = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
sha3 = { workspace = true }
