[package]
name = "genesis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
test-utils = []

[dependencies]
ed25519-dalek = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "load-dynamic", "ndarray"] }
ndarray = "0.15"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1.0", features = ["v4", "serde"] }
