[package]
name = "model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blockchain-core = { path = "../blockchain-core" }
genesis = { path = "../genesis" }
poi-types = { path = "../poi-types" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
ipfs-api-backend-hyper = "0.6"
async-trait = "0.1"
futures = "0.3"
# tracing = { workspace = true }
# tracing-attributes = "0.1"
log = "0.4"
anyhow = "1.0"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "load-dynamic"] }
ndarray = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
priority-queue = "1.3"
rand = "0.8"
toml = "0.8"
zstd = { workspace = true }
sha3 = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
genesis = { path = "../genesis", features = ["test-utils"] }
ed25519-dalek = { workspace = true }
prost = "0.12"
futures = "0.3"
zip = "0.6"
reqwest = { workspace = true }
tempfile = "3.10"
