[package]
name = "network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
genesis = { path = "../genesis" }
blockchain-core = { path = "../blockchain-core" }
consensus = { path = "../consensus" }
model = { path = "../model" }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
async-trait = "0.1"
futures = "0.3"
libp2p = { workspace = true, features = [
    "tokio",
    "tcp",
    "dns",
    "noise",
    "yamux",
    "identify",
    "ping",
    "kad",
    "gossipsub",
    "request-response",
    "macros",
] }

[dev-dependencies]
genesis = { path = "../genesis", features = ["test-utils"] }
ed25519-dalek = { workspace = true, features = ["serde"] }
