[package]
name = "node"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
libp2p = { workspace = true }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { workspace = true }
toml = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

jsonrpsee = { version = "0.21", features = ["server", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

genesis = { path = "../genesis" }
blockchain-core = { path = "../blockchain-core" }
consensus = { path = "../consensus" }
network = { path = "../network" }
model = { path = "../model" }
ed25519-dalek = { workspace = true }
