[package]
name = "node"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
libp2p = { workspace = true }
anyhow = "1.0"
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }

jsonrpsee = { version = "0.21", features = ["server", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "0.14", features = ["server", "http1", "http2", "stream"] }
http = "0.2"

genesis = { path = "../genesis" }
blockchain-core = { path = "../blockchain-core" }
consensus = { path = "../consensus" }
network = { path = "../network" }
model = { path = "../model" }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
prost = "0.12"
reqwest = { workspace = true }
zip = "0.6"
futures = "0.3"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "load-dynamic"] }
