[package]
name = "poi-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { workspace = true }

[dev-dependencies]
